--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -47,11 +47,13 @@
         android:id="@+id/tvForsøgteBogstaver"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textColor="@color/skrift"
+        android:text="@string/forsøgt"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/etInput"
         android:textStyle="bold"
-        android:textSize="20sp"
+        android:textSize="16sp"
 
         />
 
