--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -76,7 +76,7 @@
         android:layout_marginTop="32dp"
         android:background="@drawable/button"
         android:text="@string/forfraKnap"
-
+        android:onClick="genstartSpil"
         android:textColor="@color/skrift"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
