Når man taber, hiver den ordet over til TaberAktivitet, så taberen kan se hvilke ord man ikke gættede!

--- a/app/src/main/res/layout/activity_taber_aktivitet.xml
+++ b/app/src/main/res/layout/activity_taber_aktivitet.xml
@@ -26,16 +26,26 @@
         android:id="@+id/gåtilbagetaber"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="332dp"
-        android:text="@string/gåtilbage"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView"
-        android:textColor="@color/skrift"
+        android:layout_marginTop="284dp"
         android:background="@drawable/button"
+        android:text="@string/gåtilbage"
+        android:textColor="@color/skrift"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
 
-        />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/ordIkkeFundet" />
+
+    <TextView
+        android:id="@+id/ordIkkeFundet"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="32dp"
+        android:textColor="@color/skrift"
+        android:textSize="24sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
