--- a/app/src/main/res/layout/activity_vinder_aktivitet.xml
+++ b/app/src/main/res/layout/activity_vinder_aktivitet.xml
@@ -46,4 +46,15 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
 
+    <Button
+        android:id="@+id/highscorevinder"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/highscore"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:background="@drawable/button"
+        android:textColor="@color/skrift"
+        app:layout_constraintTop_toBottomOf="@+id/gåtilbagevinder" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
