--- a/app/src/main/res/layout/activity_highscore_aktivitet.xml
+++ b/app/src/main/res/layout/activity_highscore_aktivitet.xml
@@ -4,6 +4,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".HighscoreAktivitet">
+    tools:context=".HighscoreAktivitet"
+    android:background="@drawable/forestbg">
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:layout_editor_absoluteX="76dp" />
 </androidx.constraintlayout.widget.ConstraintLayout>
