--- a/app/src/main/res/layout/activity_highscore_aktivitet.xml
+++ b/app/src/main/res/layout/activity_highscore_aktivitet.xml
@@ -8,6 +8,7 @@
     android:background="@drawable/forestbg">
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_constraintTop_toTopOf="parent"
