--- a/app/src/main/res/layout/layout_listitem.xml
+++ b/app/src/main/res/layout/layout_listitem.xml
@@ -25,6 +25,7 @@
         android:layout_marginTop="33dp"
         android:layout_toEndOf="@+id/profile_image"
         android:text="@string/user"
+        android:textColor="@color/skrift"
         />
 
     <TextView
@@ -37,6 +38,7 @@
         android:layout_marginTop="33dp"
         android:layout_marginEnd="13dp"
         android:layout_toEndOf="@+id/name"
-        android:text="@string/score" />
+        android:text="@string/score"
+        android:textColor="@color/skrift"/>
 
 </RelativeLayout>
