--- a/app/src/main/res/layout/layout_listitem.xml
+++ b/app/src/main/res/layout/layout_listitem.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:id="@+id/parent_layout"
     android:padding="5dp"
     >
@@ -10,35 +10,35 @@
     <de.hdodenhof.circleimageview.CircleImageView
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/profile_image"
-        android:src="@drawable/reaper"
+        android:src="@mipmap/ic_launcher"
         android:layout_width="80dp"
         android:layout_height="80dp"
         app:civ_border_width="2dp"
         app:civ_border_color="#FF000000"/>
 
     <TextView
-        android:id="@+id/name"
+        android:id="@+id/username"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_marginStart="20dp"
-        android:layout_marginTop="33dp"
+        android:layout_marginTop="30dp"
         android:layout_toEndOf="@+id/profile_image"
         android:text="@string/user"
         android:textColor="@color/skrift"
         />
 
     <TextView
-        android:id="@+id/score"
+        android:id="@+id/userscore"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginStart="180dp"
-        android:layout_marginTop="33dp"
-        android:layout_marginEnd="13dp"
-        android:layout_toEndOf="@+id/name"
+        android:layout_marginStart="172dp"
+        android:layout_marginTop="30dp"
+        android:layout_marginEnd="25dp"
+        android:layout_toEndOf="@+id/username"
         android:text="@string/score"
-        android:textColor="@color/skrift"/>
+        android:textColor="@color/skrift" />
 
 </RelativeLayout>
